# smart-uav-scout

./: .gitignore  README.md  my_drone_data.yaml  requirements.txt
cpp_inference/: CMakeLists.txt
cpp_inference/src/: main.cpp
scripts/: convert_visdrone.py
